--- a/.devcontainer/connections.toml
+++ b/.devcontainer/connections.toml
@@ -2,9 +2,9 @@
 #export SNOWFLAKE_DEFAULT_CONNECTION_NAME="default"
 
 [default]
-account = "myaccount"
-user = "myuser"
-password = "mypassword"
+account = "ri46886.central-india.azure"
+user = "ISHAANJINDAL"
+password = "Ishaan@1234567"
 role = "HOL_ROLE"
 warehouse = "HOL_WH"
 database = "HOL_DB"
