--- a/.devcontainer/connections.toml
+++ b/.devcontainer/connections.toml
@@ -5,7 +5,7 @@
 account = "ri46886.central-india.azure"
 user = "ISHAANJINDAL"
 password = "Ishaan@1234567"
-role = "ACCOUNTADMIN"
-warehouse = "COMPUTE_WH"
+role = "HOL_ROLE"
+warehouse = "HOL_WH"
 database = "HOL_DB"
 schema = "ANALYTICS"
